# python-nats-services

./: .envrc  .gitignore  Dockerfile.services  README.md  Taskfile.yml  Tilt.crds.py  Tiltfile  Tiltfile.crds  Tiltfile.services  devbox.json  pyproject.toml
.k8s/: jetstream.yml  nats.yaml
.k8s/services/: consumer.yml  publisher.yml
.tools/: cluster-delete.sh  create-cluster.sh
services/consumer/: app.py  pyproject.toml
services/consumer/consumer/: logger.py  models.py  router.py  settings.py
services/consumer/tests/: test_example.py
services/publisher/: app.py  pyproject.toml
services/publisher/publisher/: logger.py  models.py  router.py
