[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Mitja Kramberger <mitja.kramberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.0"}
loguru = "^0.7.2"
faststream = "^0.5.23"
nats-py = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
