[tool.poetry]
name = "publisher"
version = "0.1.0"
description = ""
authors = ["Mitja Kramberger <mitja.kramberger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
